# niorin

./: CMakeLists.txt  LICENSE  README.md  mod.json
.github/workflows/: multi-platform.yml
cmake/: embed.cmake
src/: main.cpp
src/cheats/headers/: safe.cpp  safe.hpp
src/cheats/safe/: startposition.cpp
src/themes/: helper.hpp  listing.hpp
src/themes/color/: colors.hpp
src/themes/theme/: default.hpp
